staging-mern/s-frontend/s-frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-staging
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend-staging
      metadata: frontend-staging
  template:
    metadata:
      labels:
        name: frontend-staging
        metadata: frontend-staging
    spec:
      containers:
      - name: frontend-staging
        image: indraraspati/mern-frontend:4.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-staging
  namespace: staging
spec:
  #type: LoadBalancer
  ports:
    - port: 3000
      #nodePort: 30080
  selector:
          name: frontend-staging
---
