staging-mern/s-frontend/rule-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-staging
  namespace: staging
  annotations:

    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  rules:
  - host: frontend-staging.aiueocacicuceco.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: frontend-staging
          servicePort: 3000
